[package]
name = "honkhub"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
config = "0.14.1"
eyre = "0.6.12"
proto = "0.1.2"
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
eyre = "0.6.12"
prost = "0.12"
